--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 					<div class="person-info col-md-12 col-lg-8 ">
 						<p class="text-justify col-md-12">
-							挚地向您推荐自己！我叫靳冬冬，是漯河食品职业学院即将毕业的一名专科生，我怀着一颗赤诚的心和对事业的执着追求，真诚地向您推荐自己。
+						            诚挚地向您推荐自己！我叫靳冬冬，是漯河食品职业学院即将毕业的一名专科生，我怀着一颗赤诚的心和对事业的执着追求，真诚地向您推荐自己。
 						</p>
 						<p class="text-justify col-md-12">
 							　　正直和努力是我做人的原则；沉着和冷静是我遇事的态度；爱好广泛使我非常充实；众多的朋友使我倍感富有！我很强的事业心和责任感使我能够面对任何困难和挑战。
@@ -892,7 +892,7 @@
 						<div class="contact-infos">
 							<ul class="contact-infos__list">
 								<li>
-									<h5>地质 : <span>中国山西省临汾市</span></h5>
+									<h5>地址 : <span>中国山西省临汾市</span></h5>
 								</li>
 								<li>
 									<h5>电话 : <span>+86 13834331475</span></h5>
